--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <a href="doc/詩/唐朝/王昌齡/詩-唐-王昌齡.html" class="sub-link">王昌齡</a>
                 <a href="doc/詩/唐朝/王翰/詩-唐-王翰.html" class="sub-link">王翰</a>
                 <a href="doc/詩/唐朝/王勃/詩-唐-王勃.html" class="sub-link">王勃</a>
+                <a href="doc/詩/唐朝/陳子昂/詩-唐-陳子昂.html" class="sub-link">陳子昂</a>
                 <a href="doc/詩/唐朝/顏真卿/詩-唐-顏真卿.html" class="sub-link">顏真卿</a>
                 <a href="doc/詩/唐朝/羅隱/詩-唐-羅隱.html" class="sub-link">羅隱</a>
               </nav>
@@ -164,7 +165,29 @@
         <a id="mobileMenu" href="#" class="content-menu d-lg-none"><i data-feather="menu"></i></a>
       </div><!-- content-header -->
       <div class="content-body">
-        <div class="container">                 
+        <div class="container">
+          <div class="row g-3">
+            <div class="col-md-6">
+              <div class="card h-100">
+                <div class=" ratio ratio-16x9">
+                  <iframe src="https://www.youtube.com/embed/cY34IfrbKgU?start=40" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card h-100">
+                <div class=" ratio ratio-16x9">
+                  <iframe src="https://www.youtube.com/embed/3ITFFUsJXH8?start=40" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+          
+          </div>
+          <br>
           
           <div class="row g-3">
             <div class="col">
