--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
               <a href="" class="nav-link with-sub"><i data-feather="file-text"></i><span>唐朝</span></a>
               <nav class="nav-sub">
                 <a href="doc/詞/唐朝/張志和/詞-唐-張志和.html" class="sub-link">張志和</a>
+                <a href="doc/詞/唐朝/白居易/詞-唐-白居易.html" class="sub-link">白居易</a>
               </nav>
             </li>
             <li class="nav-item">
