--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
               <a href="doc/詞/宋朝/秦觀/詞-宋-秦觀.html" class="sub-link">秦觀</a>
               <a href="doc/詞/宋朝/陸游/詞-宋-陸游.html" class="sub-link">陸游</a>
               <a href="doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html" class="sub-link">蔣捷</a>
+              <a href="doc/詞/宋朝/柳永/詞-宋-柳永.html" class="sub-link">柳永</a>
             </nav>
           </li>
           <li class="nav-item">
