--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
               <a href="doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html" class="sub-link">蔣捷</a>
               <a href="doc/詞/宋朝/柳永/詞-宋-柳永.html" class="sub-link">柳永</a>
               <a href="doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html" class="sub-link">歐陽修</a>
+              <a href="doc/詞/宋朝/晏殊/詞-宋-晏殊.html" class="sub-link">晏殊</a>
             </nav>
           </li>
           <li class="nav-item">
