--- a/editRecord.html
+++ b/editRecord.html
@@ -188,8 +188,12 @@
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.23</h5>
                 <p class="card-text">
-                  新增黃庭堅一首七言律詩--寄黃幾復
+                  新增黃庭堅一首七言律詩--寄黃幾復<br>新增歐陽修的一首詞作--《玉樓春·尊前擬把歸期說》
                 </p>
+                <!-- <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.23</h5>
+                <p class="card-text">
+                  新增歐陽修的一首詞作--《玉樓春·尊前擬把歸期說》
+                </p> -->
 
               </div>
             </div>
