--- a/editRecord.html
+++ b/editRecord.html
@@ -184,16 +184,22 @@
                 <h2>《增修紀事》</h2>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.22</h5>
                 <p class="card-text">
-                  新增秦觀三首詞作--江城子·西城楊柳弄春柔、浣溪沙·漠漠輕寒上小樓、踏莎行·郴州旅舍。
+                <ul>
+                  <li>新增秦觀三首詞作--江城子·西城楊柳弄春柔、浣溪沙·漠漠輕寒上小樓、踏莎行·郴州旅舍。</li>
+                </ul>
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.23</h5>
                 <p class="card-text">
-                  新增黃庭堅一首七言律詩--寄黃幾復<br>新增歐陽修的一首詞作--《玉樓春·尊前擬把歸期說》
+                <ul>
+                  <li>新增黃庭堅一首七言律詩--寄黃幾復</li>
+                  <li>新增歐陽修的一首詞作--《玉樓春·尊前擬把歸期說》</li>
+                  <li>修改所有頁面的 title</li>
+                </ul>
                 </p>
-                <!-- <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.23</h5>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.24</h5>
                 <p class="card-text">
-                  新增歐陽修的一首詞作--《玉樓春·尊前擬把歸期說》
-                </p> -->
+                  新增范仲淹的一首詞作--《漁家傲·秋思》
+                </p>
 
               </div>
             </div>
