--- a/editRecord.html
+++ b/editRecord.html
@@ -198,7 +198,10 @@
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.24</h5>
                 <p class="card-text">
-                  新增范仲淹的一首詞作--《漁家傲·秋思》
+                <ul>
+                  <li>新增范仲淹的一首詞作--《漁家傲·秋思》</li>
+                  <li>新增黃庭堅一首七言絕句--《牧童詩》</li>
+                </ul>
                 </p>
 
               </div>
