--- a/editRecord.html
+++ b/editRecord.html
@@ -98,6 +98,7 @@
             <a href="" class="nav-link with-sub"><i data-feather="file-text"></i><span>現代詩</span></a>
             <nav class="nav-sub">
               <a href="doc/詩/現代詩/徐志摩/詩-現代詩-徐志摩.html" class="sub-link">徐志摩</a>
+              <a href="doc/詩/現代詩/余光中/詩-現代詩-余光中.html" class="sub-link">余光中</a>
             </nav>
           </li>
 
@@ -201,6 +202,12 @@
                 <ul>
                   <li>新增范仲淹的一首詞作--《漁家傲·秋思》</li>
                   <li>新增黃庭堅一首七言絕句--《牧童詩》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.26</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增余光中的一首現代詩--《鄉愁》</li>
                 </ul>
                 </p>
 
