--- a/editRecord.html
+++ b/editRecord.html
@@ -99,6 +99,7 @@
             <nav class="nav-sub">
               <a href="doc/詩/現代詩/徐志摩/詩-現代詩-徐志摩.html" class="sub-link">徐志摩</a>
               <a href="doc/詩/現代詩/余光中/詩-現代詩-余光中.html" class="sub-link">余光中</a>
+              <a href="doc/詩/現代詩/戴望舒/詩-現代詩-戴望舒.html" class="sub-link">戴望舒</a>
             </nav>
           </li>
 
@@ -208,6 +209,12 @@
                 <p class="card-text">
                 <ul>
                   <li>新增余光中的一首現代詩--《鄉愁》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.27</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增戴望舒的一首現代詩--《雨巷》</li>
                 </ul>
                 </p>
 
