--- a/editRecord.html
+++ b/editRecord.html
@@ -187,34 +187,34 @@
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.22</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增秦觀三首詞作--江城子·西城楊柳弄春柔、浣溪沙·漠漠輕寒上小樓、踏莎行·郴州旅舍。</li>
+                  <li>新增<span class="UnderLine">秦觀</span>三首詞作 --《江城子·西城楊柳弄春柔》、《浣溪沙·漠漠輕寒上小樓》、《踏莎行·郴州旅舍》。</li>
                 </ul>
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.23</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增黃庭堅一首七言律詩--寄黃幾復</li>
-                  <li>新增歐陽修的一首詞作--《玉樓春·尊前擬把歸期說》</li>
+                  <li>新增<span class="UnderLine">黃庭堅</span>一首七言律詩 -- 《寄黃幾復》</li>
+                  <li>新增<span class="UnderLine">歐陽修</span>的一首詞作 --《玉樓春·尊前擬把歸期說》</li>
                   <li>修改所有頁面的 title</li>
                 </ul>
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.24</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增范仲淹的一首詞作--《漁家傲·秋思》</li>
-                  <li>新增黃庭堅一首七言絕句--《牧童詩》</li>
+                  <li>新增<span class="UnderLine">范仲淹</span>的一首詞作 --《漁家傲·秋思》</li>
+                  <li>新增<span class="UnderLine">黃庭堅</span>一首七言絕句 --《牧童詩》</li>
                 </ul>
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.26</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增余光中的一首現代詩--《鄉愁》</li>
+                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁》</li>
                 </ul>
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.27</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增戴望舒的一首現代詩--《雨巷》</li>
+                  <li>新增<span class="UnderLine">戴望舒</span>的二首現代詩 --《雨巷》、《在天晴了的時候》</li>
                 </ul>
                 </p>
 
