--- a/index.html
+++ b/index.html
@@ -179,7 +179,16 @@
     <div class="content-body">
       <div class="container">
         <div class="row g-3">
-          <div class="col-md-6">
+          <div class="col-md-4">
+            <div class="card h-100">
+              <div class=" ratio ratio-16x9">
+                <iframe src="https://www.youtube.com/embed/dwtecChrIT8" title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
             <div class="card h-100">
               <div class=" ratio ratio-16x9">
                 <iframe src="https://www.youtube.com/embed/cY34IfrbKgU?start=40" title="YouTube video player"
@@ -189,7 +198,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <div class="card h-100">
               <div class=" ratio ratio-16x9">
                 <iframe src="https://www.youtube.com/embed/3ITFFUsJXH8?start=40" title="YouTube video player"
@@ -199,7 +208,6 @@
               </div>
             </div>
           </div>
-
         </div>
         <br>
 
