--- a/editRecord.html
+++ b/editRecord.html
@@ -217,6 +217,12 @@
                   <li>新增<span class="UnderLine">戴望舒</span>的二首現代詩 --《雨巷》、《在天晴了的時候》</li>
                 </ul>
                 </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.29</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁四韻》</li>
+                </ul>
+                </p>
 
               </div>
             </div>
