--- a/editRecord.html
+++ b/editRecord.html
@@ -224,6 +224,13 @@
                 </ul>
                 </p>
 
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.10.10</h5>
+                <p class="card-text">
+                <ul>
+                  <li>修正<span class="UnderLine">李清照</span>的一首詞 --《李清照-一剪梅·紅藕香殘玉簟秋》補充部分的2個錯誤。</li>
+                </ul>
+                </p>
+
               </div>
             </div>
           </div>
