--- a/editRecord.html
+++ b/editRecord.html
@@ -236,6 +236,12 @@
                   <li>新增<span class="UnderLine">秦觀</span>的一首詞 --《千秋歲·水邊沙外》</li>
                 </ul>
                 </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.26</h5>
+                <p class="card-text">
+                <ul>
+                  <li>替換<span class="UnderLine">徐志摩</span>的《再別康橋》介紹影片</li>
+                </ul>
+                </p>
 
               </div>
             </div>
