--- a/editRecord.html
+++ b/editRecord.html
@@ -242,6 +242,12 @@
                   <li>替換<span class="UnderLine">徐志摩</span>的《再別康橋》介紹影片</li>
                 </ul>
                 </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.30</h5>
+                <p class="card-text">
+                <ul>
+                  <li>編修<span class="UnderLine">晏殊</span>頁面的補充資料</li>
+                </ul>
+                </p>
 
               </div>
             </div>
