--- a/editRecord.html
+++ b/editRecord.html
@@ -252,7 +252,7 @@
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.31</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增<span class="UnderLine">晏殊</span>的《踏莎行·一向年光有限身》和《踏莎行·碧海無波》</li>
+                  <li>新增<span class="UnderLine">晏殊</span>的《浣溪紗·一向年光有限身》和《踏莎行·碧海無波》</li>
                 </ul>
                 </p>
 
