--- a/editRecord.html
+++ b/editRecord.html
@@ -253,6 +253,7 @@
                 <p class="card-text">
                 <ul>
                   <li>新增<span class="UnderLine">晏殊</span>的《浣溪紗·一向年光有限身》和《踏莎行·碧海無波》</li>
+                  <li>新增<span class="UnderLine">溫庭筠</span>的《更漏子·玉爐香》</li>
                 </ul>
                 </p>
 
