--- a/editRecord.html
+++ b/editRecord.html
@@ -248,12 +248,17 @@
                   <li>編修<span class="UnderLine">晏殊</span>頁面的補充資料</li>
                 </ul>
                 </p>
-                </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.31</h5>
                 <p class="card-text">
                 <ul>
                   <li>新增<span class="UnderLine">晏殊</span>的《浣溪紗·一向年光有限身》和《踏莎行·碧海無波》</li>
                   <li>新增<span class="UnderLine">溫庭筠</span>的《更漏子·玉爐香》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.01</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">溫庭筠</span>的《菩薩蠻·小山重疊金明滅》</li>
                 </ul>
                 </p>
 
