--- a/editRecord.html
+++ b/editRecord.html
@@ -259,6 +259,7 @@
                 <p class="card-text">
                 <ul>
                   <li>新增<span class="UnderLine">溫庭筠</span>的《菩薩蠻·小山重疊金明滅》</li>
+                  <li>新增<span class="UnderLine">韋莊</span>的《菩薩蠻·人人盡說江南好》</li>
                 </ul>
                 </p>
 
