--- a/editRecord.html
+++ b/editRecord.html
@@ -262,7 +262,13 @@
                   <li>新增<span class="UnderLine">韋莊</span>的《菩薩蠻·人人盡說江南好》</li>
                 </ul>
                 </p>
-
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.02</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">韋莊</span>的《思帝鄉·春日遊》</li>
+                  <li>新增<span class="UnderLine">黃巢</span>之亂說明影片</li>
+                </ul>
+                </p>
               </div>
             </div>
           </div>
