--- a/editRecord.html
+++ b/editRecord.html
@@ -72,6 +72,7 @@
               <a href="doc/詩/唐朝/陳子昂/詩-唐-陳子昂.html" class="sub-link">陳子昂</a>
               <a href="doc/詩/唐朝/顏真卿/詩-唐-顏真卿.html" class="sub-link">顏真卿</a>
               <a href="doc/詩/唐朝/羅隱/詩-唐-羅隱.html" class="sub-link">羅隱</a>
+              <a href="doc/詩/唐朝/韋莊/詩-唐-韋莊.html" class="sub-link">韋莊</a>
             </nav>
           </li>
           <li class="nav-item">
@@ -114,6 +115,8 @@
             <nav class="nav-sub">
               <a href="doc/詞/唐朝/張志和/詞-唐-張志和.html" class="sub-link">張志和</a>
               <a href="doc/詞/唐朝/白居易/詞-唐-白居易.html" class="sub-link">白居易</a>
+              <a href="doc/詞/唐朝/溫庭筠/詞-唐-溫庭筠.html" class="sub-link">溫庭筠</a>
+              <a href="doc/詞/唐朝/韋莊/詞-唐-韋莊.html" class="sub-link">韋莊</a>
             </nav>
           </li>
           <li class="nav-item">
@@ -267,6 +270,12 @@
                 <ul>
                   <li>新增<span class="UnderLine">韋莊</span>的《思帝鄉·春日遊》</li>
                   <li>新增<span class="UnderLine">黃巢</span>之亂說明影片</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.04</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">韋莊</span>的《臺城》</li>
                 </ul>
                 </p>
               </div>
