--- a/editRecord.html
+++ b/editRecord.html
@@ -278,6 +278,12 @@
                   <li>新增<span class="UnderLine">韋莊</span>的《臺城》</li>
                 </ul>
                 </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.28</h5>
+                <p class="card-text">
+                <ul>
+                  <li>修正<span class="UnderLine">楊慎</span>的《臨江仙》文檔連結的錯誤。</li>
+                </ul>
+                </p>
               </div>
             </div>
           </div>
