--- a/editRecord.html
+++ b/editRecord.html
@@ -284,6 +284,12 @@
                   <li>修正<span class="UnderLine">楊慎</span>的《臨江仙》文檔連結的錯誤。</li>
                 </ul>
                 </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.18</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">蘇東坡</span>的七言絕句 --《春宵》</li>
+                </ul>
+                </p>
               </div>
             </div>
           </div>
