--- a/editRecord.html
+++ b/editRecord.html
@@ -288,6 +288,7 @@
                 <p class="card-text">
                 <ul>
                   <li>新增<span class="UnderLine">蘇東坡</span>的七言絕句 --《春宵》</li>
+                  <li>新增<span class="UnderLine">張九齡</span>的《望月懷遠》、《感遇十二首·其一》</li>
                 </ul>
                 </p>
               </div>
