--- a/editRecord.html
+++ b/editRecord.html
@@ -187,10 +187,99 @@
             <div class="card h-100">
               <div class="card-body card-bg">
                 <h2>《增修紀事》</h2>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.22</h5>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.25</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增<span class="UnderLine">秦觀</span>三首詞作 --《江城子·西城楊柳弄春柔》、《浣溪沙·漠漠輕寒上小樓》、《踏莎行·郴州旅舍》。</li>
+                  <li>新增<span class="UnderLine">張籍</span>的樂府詩 --《節婦吟·寄東平李司空師道春宵》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.18</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">蘇東坡</span>的七言絕句 --《春宵》</li>
+                  <li>新增<span class="UnderLine">張九齡</span>的《望月懷遠》、《感遇十二首·其一》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.28</h5>
+                <p class="card-text">
+                <ul>
+                  <li>修正<span class="UnderLine">楊慎</span>的《臨江仙》文檔連結的錯誤。</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.04</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">韋莊</span>的《臺城》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.02</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">韋莊</span>的《思帝鄉·春日遊》</li>
+                  <li>新增<span class="UnderLine">黃巢</span>之亂說明影片</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.01</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">溫庭筠</span>的《菩薩蠻·小山重疊金明滅》</li>
+                  <li>新增<span class="UnderLine">韋莊</span>的《菩薩蠻·人人盡說江南好》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.31</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">晏殊</span>的《浣溪紗·一向年光有限身》和《踏莎行·碧海無波》</li>
+                  <li>新增<span class="UnderLine">溫庭筠</span>的《更漏子·玉爐香》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.30</h5>
+                <p class="card-text">
+                <ul>
+                  <li>編修<span class="UnderLine">晏殊</span>頁面的補充資料</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.26</h5>
+                <p class="card-text">
+                <ul>
+                  <li>替換<span class="UnderLine">徐志摩</span>的《再別康橋》介紹影片</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.11.04</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">秦觀</span>的一首詞 --《千秋歲·水邊沙外》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.10.10</h5>
+                <p class="card-text">
+                <ul>
+                  <li>修正<span class="UnderLine">李清照</span>的一首詞 --《李清照-一剪梅·紅藕香殘玉簟秋》補充部分的2個錯誤。</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.29</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁四韻》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.27</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">戴望舒</span>的二首現代詩 --《雨巷》、《在天晴了的時候》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.26</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁》</li>
+                </ul>
+                </p>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.24</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">范仲淹</span>的一首詞作 --《漁家傲·秋思》</li>
+                  <li>新增<span class="UnderLine">黃庭堅</span>一首七言絕句 --《牧童詩》</li>
                 </ul>
                 </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.23</h5>
@@ -201,94 +290,10 @@
                   <li>修改所有頁面的 title</li>
                 </ul>
                 </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.24</h5>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.22</h5>
                 <p class="card-text">
                 <ul>
-                  <li>新增<span class="UnderLine">范仲淹</span>的一首詞作 --《漁家傲·秋思》</li>
-                  <li>新增<span class="UnderLine">黃庭堅</span>一首七言絕句 --《牧童詩》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.26</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.27</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">戴望舒</span>的二首現代詩 --《雨巷》、《在天晴了的時候》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.29</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁四韻》</li>
-                </ul>
-                </p>
-
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.10.10</h5>
-                <p class="card-text">
-                <ul>
-                  <li>修正<span class="UnderLine">李清照</span>的一首詞 --《李清照-一剪梅·紅藕香殘玉簟秋》補充部分的2個錯誤。</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.11.04</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">秦觀</span>的一首詞 --《千秋歲·水邊沙外》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.26</h5>
-                <p class="card-text">
-                <ul>
-                  <li>替換<span class="UnderLine">徐志摩</span>的《再別康橋》介紹影片</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.30</h5>
-                <p class="card-text">
-                <ul>
-                  <li>編修<span class="UnderLine">晏殊</span>頁面的補充資料</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.31</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">晏殊</span>的《浣溪紗·一向年光有限身》和《踏莎行·碧海無波》</li>
-                  <li>新增<span class="UnderLine">溫庭筠</span>的《更漏子·玉爐香》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.01</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">溫庭筠</span>的《菩薩蠻·小山重疊金明滅》</li>
-                  <li>新增<span class="UnderLine">韋莊</span>的《菩薩蠻·人人盡說江南好》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.02</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">韋莊</span>的《思帝鄉·春日遊》</li>
-                  <li>新增<span class="UnderLine">黃巢</span>之亂說明影片</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.04</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">韋莊</span>的《臺城》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.28</h5>
-                <p class="card-text">
-                <ul>
-                  <li>修正<span class="UnderLine">楊慎</span>的《臨江仙》文檔連結的錯誤。</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.18</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">蘇東坡</span>的七言絕句 --《春宵》</li>
-                  <li>新增<span class="UnderLine">張九齡</span>的《望月懷遠》、《感遇十二首·其一》</li>
+                  <li>新增<span class="UnderLine">秦觀</span>三首詞作 --《江城子·西城楊柳弄春柔》、《浣溪沙·漠漠輕寒上小樓》、《踏莎行·郴州旅舍》。</li>
                 </ul>
                 </p>
               </div>
