--- a/editRecord.html
+++ b/editRecord.html
@@ -186,7 +186,13 @@
           <div class="col">
             <div class="card h-100">
               <div class="card-body card-bg">
-                <h2>《增修紀事》</h2>          
+                <h2>《增修紀事》</h2>  
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.20</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">蘇東坡</span>的詞 --《望江南·超然台作》</li>
+                </ul>
+                </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.26</h5>
                 <p class="card-text">
                 <ul>
