--- a/editRecord.html
+++ b/editRecord.html
@@ -187,6 +187,12 @@
             <div class="card h-100">
               <div class="card-body card-bg">
                 <h2>《增修紀事》</h2>  
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.21</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">蘇東坡</span>的詞 --《臨江仙·送錢穆父》</li>
+                </ul>
+                </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.20</h5>
                 <p class="card-text">
                 <ul>
