--- a/editRecord.html
+++ b/editRecord.html
@@ -186,7 +186,14 @@
           <div class="col">
             <div class="card h-100">
               <div class="card-body card-bg">
-                <h2>《增修紀事》</h2>  
+                <h2>《增修紀事》</h2>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.22</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《破陣子·為陳同甫賦壯詞以寄之》</li>
+                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《醜奴兒·書博山道中壁》</li>
+                </ul>
+                </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.21</h5>
                 <p class="card-text">
                 <ul>
