--- a/editRecord.html
+++ b/editRecord.html
@@ -187,6 +187,15 @@
             <div class="card h-100">
               <div class="card-body card-bg">
                 <h2>《增修紀事》</h2>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.23</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《鷓鴣天·送人》</li>
+                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《鷓鴣天·代人賦》</li>
+                  <li>新增<span class="UnderLine">柳永</span>的詞 --《少年游·長安古道馬遲遲》</li>
+                  <li>新增<span class="UnderLine">柳永</span>的詞 --《憶帝京·薄衾小枕涼天氣》</li>
+                </ul>
+                </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.22</h5>
                 <p class="card-text">
                 <ul>
