--- a/editRecord.html
+++ b/editRecord.html
@@ -187,6 +187,12 @@
             <div class="card h-100">
               <div class="card-body card-bg">
                 <h2>《增修紀事》</h2>
+                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.24</h5>
+                <p class="card-text">
+                <ul>
+                  <li>新增<span class="UnderLine">柳永</span>的詞 --《鶴沖天·黃金榜上》</li>
+                </ul>
+                </p>
                 <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.23</h5>
                 <p class="card-text">
                 <ul>
