--- a/editRecord.html
+++ b/editRecord.html
@@ -186,154 +186,75 @@
           <div class="col">
             <div class="card h-100">
               <div class="card-body card-bg">
-                <h2>《增修紀事》</h2>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.24</h5>
+                <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
-                  <li>新增<span class="UnderLine">柳永</span>的詞 --《鶴沖天·黃金榜上》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.23</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《鷓鴣天·送人》</li>
-                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《鷓鴣天·代人賦》</li>
-                  <li>新增<span class="UnderLine">柳永</span>的詞 --《少年游·長安古道馬遲遲》</li>
-                  <li>新增<span class="UnderLine">柳永</span>的詞 --《憶帝京·薄衾小枕涼天氣》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.22</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《破陣子·為陳同甫賦壯詞以寄之》</li>
-                  <li>新增<span class="UnderLine">辛棄疾</span>的詞 --《醜奴兒·書博山道中壁》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.21</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">蘇東坡</span>的詞 --《臨江仙·送錢穆父》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.03.20</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">蘇東坡</span>的詞 --《望江南·超然台作》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.26</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">林逋</span>的詞 --《相思令·吳山青》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.25</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">張籍</span>的樂府詩 --《節婦吟·寄東平李司空師道春宵》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.02.18</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">蘇東坡</span>的七言絕句 --《春宵》</li>
-                  <li>新增<span class="UnderLine">張九齡</span>的《望月懷遠》、《感遇十二首·其一》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.28</h5>
-                <p class="card-text">
-                <ul>
-                  <li>修正<span class="UnderLine">楊慎</span>的《臨江仙》文檔連結的錯誤。</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.04</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">韋莊</span>的《臺城》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.02</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">韋莊</span>的《思帝鄉·春日遊》</li>
-                  <li>新增<span class="UnderLine">黃巢</span>之亂說明影片</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2024.01.01</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">溫庭筠</span>的《菩薩蠻·小山重疊金明滅》</li>
-                  <li>新增<span class="UnderLine">韋莊</span>的《菩薩蠻·人人盡說江南好》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.31</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">晏殊</span>的《浣溪紗·一向年光有限身》和《踏莎行·碧海無波》</li>
-                  <li>新增<span class="UnderLine">溫庭筠</span>的《更漏子·玉爐香》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.30</h5>
-                <p class="card-text">
-                <ul>
-                  <li>編修<span class="UnderLine">晏殊</span>頁面的補充資料</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.12.26</h5>
-                <p class="card-text">
-                <ul>
-                  <li>替換<span class="UnderLine">徐志摩</span>的《再別康橋》介紹影片</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.11.04</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">秦觀</span>的一首詞 --《千秋歲·水邊沙外》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.10.10</h5>
-                <p class="card-text">
-                <ul>
-                  <li>修正<span class="UnderLine">李清照</span>的一首詞 --《李清照-一剪梅·紅藕香殘玉簟秋》補充部分的2個錯誤。</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.29</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁四韻》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.27</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">戴望舒</span>的二首現代詩 --《雨巷》、《在天晴了的時候》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.26</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">余光中</span>的一首現代詩 --《鄉愁》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.24</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">范仲淹</span>的一首詞作 --《漁家傲·秋思》</li>
-                  <li>新增<span class="UnderLine">黃庭堅</span>一首七言絕句 --《牧童詩》</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.23</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">黃庭堅</span>一首七言律詩 --《寄黃幾復》</li>
-                  <li>新增<span class="UnderLine">歐陽修</span>的一首詞作 --《玉樓春·尊前擬把歸期說》</li>
-                  <li>修改所有頁面的 title</li>
-                </ul>
-                </p>
-                <h5 class="card-title" style="color: rgb(26, 11, 247);">2023.07.22</h5>
-                <p class="card-text">
-                <ul>
-                  <li>新增<span class="UnderLine">秦觀</span>三首詞作 --《江城子·西城楊柳弄春柔》、《浣溪沙·漠漠輕寒上小樓》、《踏莎行·郴州旅舍》。</li>
+                  <li>2024.03.24：新增<span class="UnderLine">柳永</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-5">鶴沖天·黃金榜上</a>》</li>
+                  <li>2024.03.23：新增<span class="UnderLine">辛棄疾</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/辛棄疾/詞-宋-辛棄疾.html#XinQiji-7">鷓鴣天·送人</a>》、《<a class="a_link"
+                      href="./doc/詞/宋朝/辛棄疾/詞-宋-辛棄疾.html#XinQiji-7">鷓鴣天·代人賦</a>》；新增<span class="UnderLine">柳永</span>的《<a
+                      class="a_link" href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-3">少年游·長安古道馬遲遲</a>》、《<a class="a_link"
+                      href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-3">憶帝京·薄衾小枕涼天氣</a>》</li>
+                  <li>2024.03.22：新增<span class="UnderLine">辛棄疾</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/辛棄疾/詞-宋-辛棄疾.html#XinQiji-5">破陣子·為陳同甫賦壯詞以寄之</a>》、《<a class="a_link"
+                      href="./doc/詞/宋朝/辛棄疾/詞-宋-辛棄疾.html#XinQiji-5">醜奴兒·書博山道中壁</a>》</li>
+                  <li>2024.03.21：新增<span class="UnderLine">蘇東坡</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/蘇東坡/詞-宋-蘇東坡(蘇軾).html#SuDongpo-9">臨江仙·送錢穆父</a>》</li>
+                  <li>2024.03.20：新增<span class="UnderLine">蘇東坡</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/蘇東坡/詞-宋-蘇東坡(蘇軾).html#SuDongpo-9">望江南·超然台作</a>》</li>
+                  <li>2024.02.26：新增<span class="UnderLine">林逋</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/林逋/詞-宋-林逋.html#LinBu-1">相思令·吳山青</a>》
+                  </li>
+                  <li>2024.02.25：新增<span class="UnderLine">張籍</span>的樂府詩《<a class="a_link"
+                      href="./doc/詩/唐朝/張籍/詩-唐-張籍.html#ZhangJi-1">節婦吟·寄東平李司空師道春宵</a>》</li>
+                  <li>2024.02.18：新增<span class="UnderLine">蘇東坡</span>的七言絕句《<a class="a_link"
+                      href="./doc/詩/宋朝/蘇東坡/詩-宋-蘇東坡(蘇軾).html#SuDongpo-5">春宵</a>》；<span class="UnderLine">張九齡</span>的《<a
+                      class="a_link" href="./doc/詩/唐朝/張九齡/詩-唐-張九齡.html#ZhangJiuling-1">望月懷遠</a>》、《<a class="a_link"
+                      href="./doc/詩/唐朝/張九齡/詩-唐-張九齡.html#ZhangJiuling-1">感遇十二首·其一</a>》</li>
+                  <li>2024.01.28：修正<span class="UnderLine">楊慎</span>的《<a class="a_link"
+                      href="./doc/詞/明朝/楊慎/詞-明-楊慎.html#YangShen-1">臨江仙</a>》文檔連結的錯誤。</li>
+                  <li>2024.01.04：新增<span class="UnderLine">韋莊</span>的《<a class="a_link"
+                      href="./doc/詩/唐朝/韋莊/詩-唐-韋莊.html#WeiZhuang-1">臺城</a>》</li>
+                  <li>2024.01.02：新增<span class="UnderLine">韋莊</span>的《<a class="a_link"
+                      href="./doc/詞/唐朝/韋莊/韋莊-思帝鄉·春日遊.pdf" target="_blank">思帝鄉·春日遊</a>》；新增<a class="a_link"
+                      href="./doc/詞/唐朝/韋莊/詞-唐-韋莊.html#Huangchao"><span class="UnderLine">黃巢</span>之亂</a>說明影片
+                  </li>
+                  <li>2024.01.01：新增<span class="UnderLine">溫庭筠</span>的《<a class="a_link"
+                      href="./doc/詞/唐朝/溫庭筠/詞-唐-溫庭筠.html#WenTingyun-1">菩薩蠻·小山重疊金明滅</a>》;新增<span
+                      class="UnderLine">韋莊</span>的《<a class="a_link"
+                      href="./doc/詞/唐朝/韋莊/詞-唐-韋莊.html#WeiZhuang-1">菩薩蠻·人人盡說江南好</a>》</li>
+                  <li>2023.12.31：新增<span class="UnderLine">晏殊</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/晏殊/詞-宋-晏殊.html#YanShu-1">浣溪紗·一向年光有限身</a>》和《<a class="a_link"
+                      href="./doc/詞/宋朝/晏殊/晏殊-踏莎行·碧海無波.pdf" target="_blank">踏莎行·碧海無波</a>》；新增<span
+                      class="UnderLine">溫庭筠</span>的《<a class="a_link"
+                      href="./doc/詞/唐朝/溫庭筠/詞-唐-溫庭筠.html#WenTingyun-1">更漏子·玉爐香</a>》</li>
+                  <li>2023.12.30：編修<span class="UnderLine">晏殊</span>頁面的補充資料</li>
+                  <li>2023.12.26：替換<span class="UnderLine">徐志摩</span>的《<a class="a_link"
+                      href="./doc/詩/現代詩/徐志摩/詩-現代詩-徐志摩.html#XuZhimoVideo-1">再別康橋》介紹影片</a></li>
+                  <li>2023.11.04：新增<span class="UnderLine">秦觀</span>的詞《<a class="a_link"
+                      href="./doc/詞/宋朝/秦觀/詞-宋-秦觀.html#QinGuan-5">千秋歲·水邊沙外</a>》</li>
+                  <li>2023.10.10：修正<span class="UnderLine">李清照</span>的詞《<a class="a_link"
+                      href="./doc/詞/宋朝/李清照/詞-宋-李清照.html#LiQingzhao-3">一剪梅·紅藕香殘玉簟秋</a>》補充部分的2個錯誤。</li>
+                  <li>2023.07.29：新增<span class="UnderLine">余光中</span>的現代詩《<a class="a_link"
+                      href="./doc/詩/現代詩/余光中/詩-現代詩-余光中.html#YuGuangzhong-1">鄉愁四韻</a>》</li>
+                  <li>2023.07.27：新增<span class="UnderLine">戴望舒</span>的二首現代詩《<a class="a_link"
+                      href="./doc/詩/現代詩/戴望舒/詩-現代詩-戴望舒.html#DaiWangshu-1">雨巷</a>》、《<a class="a_link"
+                      href="./doc/詩/現代詩/戴望舒/詩-現代詩-戴望舒.html#DaiWangshu-1">在天晴了的時候</a>》</li>
+                  <li>2023.07.26：新增<span class="UnderLine">余光中</span>的現代詩《<a class="a_link"
+                      href="./doc/詩/現代詩/余光中/詩-現代詩-余光中.html#YuGuangzhong-1">鄉愁</a>》</li>
+                  <li>2023.07.24：新增<span class="UnderLine">范仲淹</span>的詞《<a class="a_link"
+                      href="./doc/詞/宋朝/范仲淹/詞-宋-范仲淹.html#FanZhongyan-1">漁家傲·秋思</a>》；新增<span
+                      class="UnderLine">黃庭堅</span>七言絕句《<a class="a_link"
+                      href="./doc/詩/宋朝/黃庭堅/詩-宋-黃庭堅.html#HuangTingjian-1">牧童詩</a>》</li>
+                  <li>2023.07.23：新增<span class="UnderLine">黃庭堅</span>七言律詩《<a class="a_link"
+                      href="./doc/詩/宋朝/黃庭堅/詩-宋-黃庭堅.html#HuangTingjian-1">寄黃幾復</a>》；新增<span
+                      class="UnderLine">歐陽修</span>的詞《<a class="a_link"
+                      href="./doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html#OuyangXiu-3">玉樓春·尊前擬把歸期說</a>》；修改所有頁面的 title。</li>
+                  <li>2023.07.22：新增<span class="UnderLine">秦觀</span>三首詞作《<a class="a_link"
+                      href="./doc/詞/宋朝/秦觀/詞-宋-秦觀.html#QinGuan-3">江城子·西城楊柳弄春柔</a>》、《<a class="a_link"
+                      href="./doc/詞/宋朝/秦觀/詞-宋-秦觀.html#QinGuan-3">浣溪沙·漠漠輕寒上小樓</a>》、《<a class="a_link"
+                      href="./doc/詞/宋朝/秦觀/詞-宋-秦觀.html#QinGuan-5">踏莎行·郴州旅舍</a>》。</li>
                 </ul>
                 </p>
               </div>
