--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2024.04.14：新增<span class="UnderLine">李清照</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/李清照/詞-宋-李清照.html#LiQingzhao-7">鷓鴣天·桂花</a>》</li>
                   <li>2024.03.24：新增<span class="UnderLine">柳永</span>的《<a class="a_link"
                       href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-6">鶴沖天·黃金榜上</a>》</li>
                   <li>2024.03.23：新增<span class="UnderLine">辛棄疾</span>的《<a class="a_link"
