--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2024.07.23：新增<span class="UnderLine">岳飛</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/岳飛/詞-宋-岳飛.html#YueFei-2">小重山·昨夜寒蛩不住鳴</a>》</li>
                   <li>2024.07.20：新增<span class="UnderLine">岳飛</span>的《<a class="a_link"
                       href="./doc/詞/宋朝/岳飛/詞-宋-岳飛.html#YueFei-1">滿江紅·怒髮衝冠</a>》</li>
                   <li>2024.04.14：新增<span class="UnderLine">李清照</span>的《<a class="a_link"
