--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2024.12.30：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
+                      href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-1">江雪</a>》</li>
                   <li>2024.07.26：新增<span class="UnderLine">劉禹錫</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-1">竹枝詞</a>》、《<a class="a_link" href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-2">酬樂天揚州初逢席上見贈</a>》</li>
                   <li>2024.07.23：新增<span class="UnderLine">岳飛</span>的《<a class="a_link"
