--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.01.20：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
+                      href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-3">登柳州城樓寄漳汀封連四州</a>》</li>
                   <li>2025.01.18：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-2">重別夢得</a>》</li>
                   <li>2024.12.30：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
