--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.01.29：新增<span class="UnderLine">劉禹錫</span>的《<a class="a_link"
+                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-3">石頭城</a>》；新增<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#JiangJie-2">一剪梅·舟過吳江</a>》</li>
                   <li>2025.01.20：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-3">登柳州城樓寄漳汀封連四州</a>》</li>
                   <li>2025.01.18：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
@@ -223,7 +225,7 @@
                   <li>2024.02.25：新增<span class="UnderLine">張籍</span>的樂府詩《<a class="a_link"
                       href="./doc/詩/唐朝/張籍/詩-唐-張籍.html#ZhangJi-1">節婦吟·寄東平李司空師道春宵</a>》</li>
                   <li>2024.02.18：新增<span class="UnderLine">蘇東坡</span>的七言絕句《<a class="a_link"
-                      href="./doc/詩/宋朝/蘇東坡/詩-宋-蘇東坡(蘇軾).html#SuDongpo-5">春宵</a>》；<span class="UnderLine">張九齡</span>的《<a
+                      href="./doc/詩/宋朝/蘇東坡/詩-宋-蘇東坡(蘇軾).html#SuDongpo-5">春宵</a>》；新增<span class="UnderLine">張九齡</span>的《<a
                       class="a_link" href="./doc/詩/唐朝/張九齡/詩-唐-張九齡.html#ZhangJiuling-1">望月懷遠</a>》、《<a class="a_link"
                       href="./doc/詩/唐朝/張九齡/詩-唐-張九齡.html#ZhangJiuling-2">感遇十二首·其一</a>》</li>
                   <li>2024.01.28：修正<span class="UnderLine">楊慎</span>的《<a class="a_link"
