--- a/editRecord.html
+++ b/editRecord.html
@@ -189,8 +189,9 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.01.31：新增補充資料-<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#CombBuilding">虞美人·梳樓</a>》</li>
                   <li>2025.01.29：新增<span class="UnderLine">劉禹錫</span>的《<a class="a_link"
-                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-3">石頭城</a>》；新增<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#JiangJie-2">一剪梅·舟過吳江</a>》</li>
+                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-3">石頭城</a>》；新增<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#JiangJie-1">一剪梅·舟過吳江</a>》</li>
                   <li>2025.01.20：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-3">登柳州城樓寄漳汀封連四州</a>》</li>
                   <li>2025.01.18：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
