--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.02.16：新增<span class="UnderLine">常建</span>的《<a class="a_link"
+                      href="./doc/詩/唐朝/常建/詩-唐-常建.html#ChangJian-1">題破山寺後禪院</a>》</li>
                   <li>2025.01.31：新增補充資料-<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#CombBuilding">虞美人·梳樓</a>》</li>
                   <li>2025.01.29：新增<span class="UnderLine">劉禹錫</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-3">石頭城</a>》；新增<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#JiangJie-1">一剪梅·舟過吳江</a>》</li>
