--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               <a href="doc/詩/唐朝/張籍/詩-唐-張籍.html" class="sub-link">張籍</a>
               <a href="doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html" class="sub-link">劉禹錫</a>
               <a href="doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html" class="sub-link">柳宗元</a>
+              <a href="doc/詩/唐朝/常建/詩-唐-常建.html" class="sub-link">常建</a>
             </nav>
           </li>
           <li class="nav-item">
