--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,10 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.05.06：新增<span class="UnderLine">許渾</span>的《<a class="a_link"
+                      href="./doc/詩/唐朝/許渾/詩-唐-許渾.html#XuHun-1">咸陽城東樓</a>》</li>
+                      <li>2025.05.06：新增<span class="UnderLine">林逋</span>的《<a class="a_link"
+                          href="./doc/詞/宋朝/林逋/詞-宋-林逋.html#LinBu-2">山園小梅·其一</a>》</li>
                   <li>2025.02.16：新增<span class="UnderLine">常建</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/常建/詩-唐-常建.html#ChangJian-1">題破山寺後禪院</a>》</li>
                   <li>2025.01.31：新增補充資料-<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#CombBuilding">虞美人·梳樓</a>》</li>
