--- a/editRecord.html
+++ b/editRecord.html
@@ -189,6 +189,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.06.08：新增<span class="UnderLine">歐陽修</span>的詞《<a
+                      class="a_link" href="./doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html#OuyangXiu-4">踏莎行·候館梅殘</a>》</li>
                   <li>2025.05.06：新增<span class="UnderLine">許渾</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/許渾/詩-唐-許渾.html#XuHun-1">咸陽城東樓</a>》</li>
                       <li>2025.05.06：新增<span class="UnderLine">林逋</span>的《<a class="a_link"
