--- a/editRecord.html
+++ b/editRecord.html
@@ -133,6 +133,9 @@
               <a href="doc/詞/宋朝/柳永/詞-宋-柳永.html" class="sub-link">柳永</a>
               <a href="doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html" class="sub-link">歐陽修</a>
               <a href="doc/詞/宋朝/晏殊/詞-宋-晏殊.html" class="sub-link">晏殊</a>
+              <a href="doc/詞/宋朝/林逋/詞-宋-林逋.html" class="sub-link">林逋</a>
+              <a href="doc/詞/宋朝/岳飛/詞-宋-岳飛.html" class="sub-link">岳飛</a>
+              <a href="doc/詞/宋朝/李之儀/詞-宋-李之儀.html" class="sub-link">李之儀</a>
             </nav>
           </li>
           <li class="nav-item">
@@ -189,6 +192,8 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.07.03：新增<span class="UnderLine">李之儀</span>的詞《<a class="a_link"
+                      href="./doc/詞/宋朝/李之儀/詞-宋-李之儀.html#LeeChiYee-1">卜算子·我住長江頭</a>》</li>
                   <li>2025.06.08：新增<span class="UnderLine">歐陽修</span>的詞《<a
                       class="a_link" href="./doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html#OuyangXiu-4">踏莎行·候館梅殘</a>》</li>
                   <li>2025.05.06：新增<span class="UnderLine">許渾</span>的《<a class="a_link"
