--- a/editRecord.html
+++ b/editRecord.html
@@ -193,7 +193,7 @@
                 <p class="card-text">
                 <ul>
                   <li>2025.07.03：新增<span class="UnderLine">李之儀</span>的詞《<a class="a_link"
-                      href="./doc/詞/宋朝/李之儀/詞-宋-李之儀.html#LeeChiYee-1">卜算子·我住長江頭</a>》</li>
+                      href="./doc/詞/宋朝/李之儀/詞-宋-李之儀.html#LeeChiYee-1">卜算子·我住長江頭</a>》以及<span class="UnderLine">柳永</span>的詞《<a class="a_link" href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-7">八聲甘州·對瀟瀟暮雨灑江天</a>》</li>
                   <li>2025.06.08：新增<span class="UnderLine">歐陽修</span>的詞《<a
                       class="a_link" href="./doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html#OuyangXiu-4">踏莎行·候館梅殘</a>》</li>
                   <li>2025.05.06：新增<span class="UnderLine">許渾</span>的《<a class="a_link"
