--- a/editRecord.html
+++ b/editRecord.html
@@ -192,6 +192,7 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.11.27：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
                   <li>2025.07.03：新增<span class="UnderLine">李之儀</span>的詞《<a class="a_link"
                       href="./doc/詞/宋朝/李之儀/詞-宋-李之儀.html#LeeChiYee-1">卜算子·我住長江頭</a>》以及<span class="UnderLine">柳永</span>的詞《<a class="a_link" href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-7">八聲甘州·對瀟瀟暮雨灑江天</a>》</li>
                   <li>2025.06.08：新增<span class="UnderLine">歐陽修</span>的詞《<a
