--- a/editRecord.html
+++ b/editRecord.html
@@ -192,6 +192,7 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.12.23：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/孟浩然/詩-唐-孟浩然.html">孟浩然</span></a>和<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/元稹/詩-唐-元稹.html">元稹</span></a>的所有文檔。</li>
                   <li>2025.12.09：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/杜甫/詩-唐-杜甫.html">杜甫</span></a>的所有文檔。</li>
                   <li>2025.11.27：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
                   <li>2025.07.03：新增<span class="UnderLine">李之儀</span>的詞《<a class="a_link"
