--- a/editRecord.html
+++ b/editRecord.html
@@ -192,6 +192,7 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
+                  <li>2025.12.31：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/白居易/詩-唐-白居易.html">白居易</span></a>的所有文檔。</li>
                   <li>2026.01.10：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王維/詩-唐-王維.html">王維</span></a>的所有文檔，以及<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王翰/詩-唐-王翰.html">王翰</span></a>的文檔。</li>
                   <li>2025.12.31：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王勃/詩-唐-王勃.html">王勃</span></a>的文檔。</li>
                   <li>2025.12.30：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王昌齡/詩-唐-王昌齡.html">王昌齡</span></a>的所有文檔。</li>
