--- a/editRecord.html
+++ b/editRecord.html
@@ -192,27 +192,43 @@
                 <h2 style="color: rgb(26, 11, 247);">《增修紀事》</h2>
                 <p class="card-text">
                 <ul>
-                  <li>2026.01.20：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
-                  <li>2026.01.12：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/白居易/詩-唐-白居易.html">白居易</span></a>的所有文檔。</li>
-                  <li>2026.01.10：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王維/詩-唐-王維.html">王維</span></a>的所有文檔，以及<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王翰/詩-唐-王翰.html">王翰</span></a>的文檔。</li>
-                  <li>2025.12.31：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王勃/詩-唐-王勃.html">王勃</span></a>的文檔。</li>
-                  <li>2025.12.30：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王昌齡/詩-唐-王昌齡.html">王昌齡</span></a>的所有文檔。</li>
-                  <li>2025.12.23：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/王之渙/詩-唐-王之渙.html">王之渙</span></a>和<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/元稹/詩-唐-元稹.html">元稹</span></a>的所有文檔。</li>
-                  <li>2025.12.09：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/杜甫/詩-唐-杜甫.html">杜甫</span></a>的所有文檔。</li>
-                  <li>2025.11.27：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
+                  <li>2026.01.22：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/李商隱/詩-唐-李商隱.html">李商隱</span></a>的所有文檔。</li>
+                  <li>2026.01.20：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
+                  <li>2026.01.12：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/白居易/詩-唐-白居易.html">白居易</span></a>的所有文檔。</li>
+                  <li>2026.01.10：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/王維/詩-唐-王維.html">王維</span></a>的所有文檔，以及<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/王翰/詩-唐-王翰.html">王翰</span></a>的文檔。</li>
+                  <li>2025.12.31：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/王勃/詩-唐-王勃.html">王勃</span></a>的文檔。</li>
+                  <li>2025.12.30：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/王昌齡/詩-唐-王昌齡.html">王昌齡</span></a>的所有文檔。</li>
+                  <li>2025.12.23：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/王之渙/詩-唐-王之渙.html">王之渙</span></a>和<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/元稹/詩-唐-元稹.html">元稹</span></a>的所有文檔。</li>
+                  <li>2025.12.09：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/杜甫/詩-唐-杜甫.html">杜甫</span></a>的所有文檔。</li>
+                  <li>2025.11.27：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
                   <li>2025.07.03：新增<span class="UnderLine">李之儀</span>的詞《<a class="a_link"
-                      href="./doc/詞/宋朝/李之儀/詞-宋-李之儀.html#LeeChiYee-1">卜算子·我住長江頭</a>》以及<span class="UnderLine">柳永</span>的詞《<a class="a_link" href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-7">八聲甘州·對瀟瀟暮雨灑江天</a>》</li>
-                  <li>2025.06.08：新增<span class="UnderLine">歐陽修</span>的詞《<a
-                      class="a_link" href="./doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html#OuyangXiu-4">踏莎行·候館梅殘</a>》</li>
+                      href="./doc/詞/宋朝/李之儀/詞-宋-李之儀.html#LeeChiYee-1">卜算子·我住長江頭</a>》以及<span
+                      class="UnderLine">柳永</span>的詞《<a class="a_link"
+                      href="./doc/詞/宋朝/柳永/詞-宋-柳永.html#LiuYong-7">八聲甘州·對瀟瀟暮雨灑江天</a>》</li>
+                  <li>2025.06.08：新增<span class="UnderLine">歐陽修</span>的詞《<a class="a_link"
+                      href="./doc/詞/宋朝/歐陽修/詞-宋-歐陽修.html#OuyangXiu-4">踏莎行·候館梅殘</a>》</li>
                   <li>2025.05.06：新增<span class="UnderLine">許渾</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/許渾/詩-唐-許渾.html#XuHun-1">咸陽城東樓</a>》</li>
-                      <li>2025.05.06：新增<span class="UnderLine">林逋</span>的《<a class="a_link"
-                          href="./doc/詞/宋朝/林逋/詞-宋-林逋.html#LinBu-2">山園小梅·其一</a>》</li>
+                  <li>2025.05.06：新增<span class="UnderLine">林逋</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/林逋/詞-宋-林逋.html#LinBu-2">山園小梅·其一</a>》</li>
                   <li>2025.02.16：新增<span class="UnderLine">常建</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/常建/詩-唐-常建.html#ChangJian-1">題破山寺後禪院</a>》</li>
-                  <li>2025.01.31：新增補充資料-<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#CombBuilding">虞美人·梳樓</a>》</li>
+                  <li>2025.01.31：新增補充資料-<span class="UnderLine">蔣捷</span>的《<a class="a_link"
+                      href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#CombBuilding">虞美人·梳樓</a>》</li>
                   <li>2025.01.29：新增<span class="UnderLine">劉禹錫</span>的《<a class="a_link"
-                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-3">石頭城</a>》；新增<span class="UnderLine">蔣捷</span>的《<a class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#JiangJie-1">一剪梅·舟過吳江</a>》</li>
+                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-3">石頭城</a>》；新增<span class="UnderLine">蔣捷</span>的《<a
+                      class="a_link" href="./doc/詞/宋朝/蔣捷/詞-宋-蔣捷.html#JiangJie-1">一剪梅·舟過吳江</a>》</li>
                   <li>2025.01.20：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-3">登柳州城樓寄漳汀封連四州</a>》</li>
                   <li>2025.01.18：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
@@ -220,7 +236,8 @@
                   <li>2024.12.30：新增<span class="UnderLine">柳宗元</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-1">江雪</a>》</li>
                   <li>2024.07.26：新增<span class="UnderLine">劉禹錫</span>的《<a class="a_link"
-                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-1">竹枝詞</a>》、《<a class="a_link" href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-2">酬樂天揚州初逢席上見贈</a>》</li>
+                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-1">竹枝詞</a>》、《<a class="a_link"
+                      href="./doc/詩/唐朝/劉禹錫/詩-唐-劉禹錫.html#LiuYuxi-2">酬樂天揚州初逢席上見贈</a>》</li>
                   <li>2024.07.23：新增<span class="UnderLine">岳飛</span>的《<a class="a_link"
                       href="./doc/詞/宋朝/岳飛/詞-宋-岳飛.html#YueFei-2">小重山·昨夜寒蛩不住鳴</a>》</li>
                   <li>2024.07.20：新增<span class="UnderLine">岳飛</span>的《<a class="a_link"
