--- a/editRecord.html
+++ b/editRecord.html
@@ -193,6 +193,10 @@
                 <p class="card-text">
                 <ul>
                   <li>2026.01.22：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/杜牧/詩-唐-杜牧.html">杜牧</span></a>的所有文檔。</li>
+                  <li>2026.02.04：新增<span class="UnderLine">李商隱</span>的《<a class="a_link"
+                      href="./doc/詩/唐朝/李商隱/詩-唐-李商隱.html#LiShangyin-04">無題·昨夜星辰昨夜風</a>》</li>
+                  <li>2026.01.22：更新<span class="UnderLine"><a class="a_link"
                         href="./doc/詩/唐朝/李商隱/詩-唐-李商隱.html">李商隱</span></a>的所有文檔。</li>
                   <li>2026.01.20：更新<span class="UnderLine"><a class="a_link"
                         href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
@@ -210,8 +214,6 @@
                         href="./doc/詩/唐朝/元稹/詩-唐-元稹.html">元稹</span></a>的所有文檔。</li>
                   <li>2025.12.09：更新<span class="UnderLine"><a class="a_link"
                         href="./doc/詩/唐朝/杜甫/詩-唐-杜甫.html">杜甫</span></a>的所有文檔。</li>
-                  <li>2025.11.27：更新<span class="UnderLine"><a class="a_link"
-                        href="./doc/詩/唐朝/李白/詩-唐-李白.html">李白</span></a>的所有文檔。</li>
                   <li>2025.07.03：新增<span class="UnderLine">李之儀</span>的詞《<a class="a_link"
                       href="./doc/詞/宋朝/李之儀/詞-宋-李之儀.html#LeeChiYee-1">卜算子·我住長江頭</a>》以及<span
                       class="UnderLine">柳永</span>的詞《<a class="a_link"
