--- a/editRecord.html
+++ b/editRecord.html
@@ -193,6 +193,8 @@
                 <p class="card-text">
                 <ul>
                   <li>2026.02.04：更新<span class="UnderLine"><a class="a_link"
+                        href="./doc/詩/唐朝/杜秋娘/詩-唐-杜秋娘.html#DuQiuniang-01">杜秋娘</span></a>的金縷衣。</li>
+                  <li>2026.02.04：更新<span class="UnderLine"><a class="a_link"
                         href="./doc/詩/唐朝/杜牧/詩-唐-杜牧.html">杜牧</span></a>的所有文檔。</li>
                   <li>2026.02.04：新增<span class="UnderLine">李商隱</span>的《<a class="a_link"
                       href="./doc/詩/唐朝/李商隱/詩-唐-李商隱.html#LiShangyin-04">無題·昨夜星辰昨夜風</a>》</li>
