--- a/editRecord.html
+++ b/editRecord.html
@@ -194,6 +194,8 @@
                 <ul>
                   <ul>
                     <ul>
+                      <li>2026.02.24：更新<span class="UnderLine"><a class="a_link"
+                            href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html">柳宗元</span></a>的所有文檔。</li>
                       <li>2026.02.05：更新<span class="UnderLine"><a class="a_link"
                             href="./doc/詩/唐朝/孟浩然/詩-唐-孟浩然.html">孟浩然</span></a>的所有文檔。</li>
                       <li>2026.02.05：更新<span class="UnderLine"><a class="a_link"
