--- a/editRecord.html
+++ b/editRecord.html
@@ -194,6 +194,8 @@
                 <ul>
                   <ul>
                     <ul>
+                      <li>2026.02.24：新增<span class="UnderLine">柳宗元</span>的詩《<a class="a_link"
+                          href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-4">漁翁</a>》</li>
                       <li>2026.02.24：更新<span class="UnderLine"><a class="a_link"
                             href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html">柳宗元</span></a>、<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/韋莊/詩-唐-韋莊.html">韋莊</span></a>和<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/高適/詩-唐-高適.html">高適</span></a>的所有文檔。</li>
                       <li>2026.02.05：更新<span class="UnderLine"><a class="a_link"
