--- a/editRecord.html
+++ b/editRecord.html
@@ -194,6 +194,8 @@
                 <ul>
                   <ul>
                     <ul>
+                      <li>2026.02.26：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/常建/詩-唐-常建.html">常建</span></a>和<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/張九齡/詩-唐-張九齡.html">張九齡</span></a>的文檔。</li>
+                      <li>2026.02.25：更新<span class="UnderLine"><a class="a_link" href="./doc/詩/唐朝/崔護/詩-唐-崔護.html">崔護</span></a>的文檔。</li>
                       <li>2026.02.24：新增<span class="UnderLine">柳宗元</span>的詩《<a class="a_link"
                           href="./doc/詩/唐朝/柳宗元/詩-唐-柳宗元.html#LiuZongyuan-4">漁翁</a>》</li>
                       <li>2026.02.24：更新<span class="UnderLine"><a class="a_link"
